[tool.poetry]
name = "facepicker"
version = "0.2.0"
description = "kao you"
authors = ["YAMASHITA Yuta <proyuuta0618188188@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">3.7.1,<4.0"
face-recognition = "^1.3.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
wheel = "^0.36.2"
flake8 = "^3.8.4"
poethepoet = "^0.9.0"

[tool.poetry.scripts]
facepicker = "facepicker.cli:cli"
kaoyou = "facepicker.cli:cli"

[tool.poe.tasks]
lint = "flake8 facepicker"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
